# Duplo

./: CMakeLists.txt
.github/workflows/: ccpp.yml
src/: ConsoleExporter.cpp  Duplo.cpp  FileExporter.cpp  JsonExporter.cpp  Main.cpp  XmlExporter.cpp
src/include/: Block.h  Matrix.h  Options.h
